Add multiple PDF documents to the comprobantes and tickets directory
- Added comprobante_00000010_1760249299962.pdf
- Added comprobante_00000011_1760249749897.pdf
- Added ticket_00000007_1760223686879.pdf
- Added ticket_00000008_1760234601737.pdf
- Added ticket_00000009_1760237470615.pdf
- Added ticket_00000010_1760249299551.pdf
- Added ticket_00000011_1760249749610.pdf